--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 <meta name="twitter:title" content="採用サイト | 長野県信用保証協会" />
 <meta name="twitter:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 
-<link rel='stylesheet' id='style-css' href='http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/assets/css/style.css?ver=6.1.1' type='text/css' media='all' />
+<link rel='stylesheet' id='style-css' href='./assets/css/reset.css?ver=6.1.1' type='text/css' media='all' />
+<link rel='stylesheet' id='style-css' href='./assets/css/style.css?ver=6.1.1' type='text/css' media='all' />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+<script src="./assets/js/common.js"></script>
 <link rel="icon" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/favicon.png" type="image/png"/>
 </head>
 
 <body class="l-body">
 
-<div class=" p-header__inner p-header__sp">
+<div class="p-header__inner p-header__sp">
   <button class="p-header__menu-button"></button>
   <div class="p-header__menu-design">
     <span></span>
@@ -36,23 +39,21 @@
   <div class="p-header">
     <figure class="p-header__logo">
       <a href="http://nagano-cgc-orjp.check-xbiz.jp/cms">
-        <img src="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/assets/img/logo.png" alt="長野県信用保証協会 採用サイト">
+        <img src="./assets/img/logo.png" alt="長野県信用保証協会 採用サイト">
       </a>
     </figure>
-    <div class="p-header__inner p-header__pc">
-      <div class="p-header__nav-container">
-        <nav class="p-header__nav">
-          <ul class="p-header__nav-list">
-            <li class="p-header__nav-item c-link--animation-ub2"><a href="./about">長野県信用保証協会とは</a></li>
-            <li class="p-header__nav-item c-link--animation-ub2"><a href="">仕事を知る</a></li>
-            <li class="p-header__nav-item c-link--animation-ub2"><a href="">人を知る</a></li>
-            <li class="p-header__nav-item c-link--animation-ub2"><a href="">支援事例</a></li>
-            <li class="p-header__nav-item c-link--animation-ub2"><a href="">働く環境</a></li>
-            <li class="p-header__nav-item c-link--animation-ub2"><a href="">募集要項</a></li>
-          </ul>
-          <a href=""><span>エントリー</span></a>
-        </nav>
-      </div>
+    <div class="p-header__nav-container">
+      <nav class="p-header__nav">
+        <ul class="p-header__nav-list">
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="./about">長野県信用保証協会とは</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="">仕事を知る</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="">人を知る</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="">支援事例</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="">働く環境</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="">募集要項</a></li>
+        </ul>
+        <div class="p-header__nav-entry"><a href=""><span>エントリー</span></a></div>
+      </nav>
     </div>
   </div>
 </header>
@@ -62,74 +63,86 @@
 
 <footer class="l-footer">
   <div class="p-footer">
-    <div class="p-footer__inner-banner">
-      誰かの一歩を、支える人になりませんか？
-      <ul class="p-footer__banner">
-        <li class="p-footer__banner-item"><a class="c-link--animation-op" href=""><span>募集要項を確認する</span></a></li>
-        <li class="p-footer__banner-item"><a class="c-link--animation-op" href="" target="_blank"><span>エントリーはこちら</span></a></li>
-      </ul>
-      <a href=""><span>よくあるご質問</span></a>
-    </div>
-    <div>
-      <div class="p-footer__inner-logo">
-        <figure class="p-footer__logo">
-          <img src="<?php bloginfo('template_url') ?>/assets/img/logo.png" alt="長野県信用保証協会 採用サイト">
-        </figure>
-      </div>
-      <div class="p-footer__inner-list">
-        <dl>
-          <div>
-            <dt><a href="">長野県信用保証協会とは</a></dt>
-            <dd><a href="">私たちの役割</a></dd>
-            <dd><a href="">基本理念</a></dd>
-            <dd><a href="">数字で見る長野県信用保証協会</a></dd>
-          </div>
-          <div>
-            <dt><a href="">仕事を知る</a></dt>
-            <dd><a href="">営業部</a></dd>
-            <dd><a href="">企業支援部</a></dd>
-            <dd><a href="">業務統括部</a></dd>
-            <dd><a href="">総務部</a></dd>
-            <dd><a href="">コンプライアンス統括部</a></dd>
-          </div>
-          <div>
-            <dt><a href="">人を知る</a></dt>
-            <dd><a href="">職員紹介 中島 菜々子</a></dd>
-            <dd><a href="">職員紹介 本田 朋樹</a></dd>
-            <dd><a href="">職員紹介 浦野 章博</a></dd>
-            <dd><a href="">職員紹介 一ノ瀬 美波</a></dd>
-            <dd><a href="">職員紹介 石坂 友弥</a></dd>
-            <dd><a href="">座談会</a></dd>
-          </div>
-          <div>
-            <dt><a href="">支援事例</a></dt>
-            <dd><a href="">創業者支援
-            <dd><a href="">事業承継支援</a></dd>
-            <dd><a href="">経営改善支援</a></dd>
-            <dd><a href="">課題解決支援</a></dd>
-            <dd><a href="">事業再生支援</a></dd>
-          </div>
-          <div>
-            <dt><a href="">働く環境</a></dt>
-            <dd><a href="">福利厚生</a></dd>
-            <dd><a href="">研修制度</a></dd>
-            <dd><a href="">協会の様子</a></dd>
-          </div>
-          <div>
-            <dt><a href="">募集要項</a></dt>
-          </div>
-          <div>
-            <dt><a href="">よくあるご質問</a></dt>
-          </div>
-        </dl>
+
+    <div class="p-footer__banner">
+      <div class="p-footer__banner-inner l-wrapper3">
+        <h2 class="p-footer__banner-text">誰かの一歩を、<br class="c-br--tab">支える人になりませんか？</h2>
+        <ul class="p-footer__banner-list">
+          <li class="p-footer__banner-list-item -white"><a href=""><span>募集要項を確認する</span></a></li>
+          <li class="p-footer__banner-list-item -yellow"><a href="" target="_blank"><span>エントリーはこちら</span></a></li>
+        </ul>
+        <div class="p-footer__banner-list-faq"><a href=""><span>よくあるご質問</span></a></div>
       </div>
     </div>
 
-    <div class="p-footer__inner-bottom">
-      <div class="p-footer__bottom">
-        <small>&copy; 2023 CREDIT GUARANTEE CORPORATION OF NAGANO-KEN.<br class="c-br--tab">All rights reserved.</small>
+    <div class="l-wrapper">
+      <div class="p-footer__inner-sitemap">
+        <div class="p-footer__inner-logo">
+          <figure class="p-footer__logo">
+            <img src="./assets/img/logo.png" alt="長野県信用保証協会 採用サイト">
+          </figure>
+        </div>
+        <div class="p-footer__inner-list">
+          <dl class="p-footer__list">
+            <div class="p-footer__list-item">
+              <dt><a href="">長野県信用保証協会とは</a></dt>
+              <dd><a href="">私たちの役割</a></dd>
+              <dd><a href="">基本理念</a></dd>
+              <dd class="-sp"><a href="">数字で見る長野県信用保証協会</a></dd>
+            </div>
+            <div class="p-footer__list-item">
+              <dt><a href="">仕事を知る</a></dt>
+              <dd><a href="">営業部</a></dd>
+              <dd><a href="">企業支援部</a></dd>
+              <dd><a href="">業務統括部</a></dd>
+              <dd><a href="">総務部</a></dd>
+              <dd><a href="">コンプライアンス統括部</a></dd>
+            </div>
+            <div class="p-footer__list-item">
+              <dt><a href="">人を知る</a></dt>
+              <dd><a href="">職員紹介 中島 菜々子</a></dd>
+              <dd><a href="">職員紹介 本田 朋樹</a></dd>
+              <dd><a href="">職員紹介 浦野 章博</a></dd>
+              <dd><a href="">職員紹介 一ノ瀬 美波</a></dd>
+              <dd><a href="">職員紹介 石坂 友弥</a></dd>
+              <dd><a href="">座談会</a></dd>
+            </div>
+          </dl>
+          <dl class="p-footer__list">
+            <div class="p-footer__list-item">
+              <dt><a href="">支援事例</a></dt>
+              <dd><a href="">創業者支援
+              <dd><a href="">事業承継支援</a></dd>
+              <dd><a href="">経営改善支援</a></dd>
+              <dd><a href="">課題解決支援</a></dd>
+              <dd><a href="">事業再生支援</a></dd>
+            </div>
+            <div class="p-footer__list-item">
+              <dt><a href="">働く環境</a></dt>
+              <dd><a href="">福利厚生</a></dd>
+              <dd><a href="">研修制度</a></dd>
+              <dd><a href="">協会の様子</a></dd>
+            </div>
+            <div class="p-footer__list-item">
+              <dt><a href="">募集要項</a></dt>
+            </div>
+            <div class="p-footer__list-item">
+              <dt><a href="">よくあるご質問</a></dt>
+            </div>
+          </dl>
+        </div>
       </div>
-      <a href=""><span>コーポレートサイト</span></a>
+
+      <div class="p-footer__inner-bottom">
+        <div class="p-footer__bottom">
+          <small>&copy; 2023 CREDIT GUARANTEE CORPORATION OF NAGANO-KEN.<br class="c-br--tab">All rights reserved.</small>
+        </div>
+        <ul class="p-footer__corporate">
+          <li><a href=""><span class="c-icon--blank">コーポレートサイト</span></a></li>
+          <li><a href=""><span>個人情報保護方針</span></a></li>
+        </ul>
+      </div>
+
     </div>
   </div>
 </footer>
