--- a/setting.html
+++ b/setting.html
@@ -19,4 +19,4 @@ $border-color: #2B68C9;
 // テキストの色
 $main-text-color: #171717;
 $sub-text-color2: #0075BC;
-$accent-text-color1: #fff;
+$accent-text-color: #fff;
