--- a/index.html
+++ b/index.html
@@ -17,16 +17,15 @@
 <meta name="twitter:title" content="採用サイト | 長野県信用保証協会" />
 <meta name="twitter:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 
-<link rel='stylesheet' id='style-css' href='./assets/css/reset.css?ver=6.1.1' type='text/css' media='all' />
-<link rel='stylesheet' id='style-css' href='./assets/css/style.css?ver=6.1.1' type='text/css' media='all' />
+<link rel='stylesheet' href='./assets/css/reset.css?ver=6.1.1' type='text/css' media='all' />
+<link rel='stylesheet' href='./assets/css/style.css?ver=6.1.1' type='text/css' media='all' />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
-<script src="./assets/js/common.js"></script>
 <link rel="icon" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/favicon.png" type="image/png"/>
 </head>
 
 <body class="l-body">
 
-<div class="p-header__inner p-header__sp">
+<div class="p-header__sp">
   <button class="p-header__menu-button"></button>
   <div class="p-header__menu-design">
     <span></span>
@@ -146,7 +145,7 @@
     </div>
   </div>
 </footer>
-
+<script src="./assets/js/common.js"></script>
 </body>
 
 </html>
