--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
       <nav class="p-header__nav">
         <ul class="p-header__nav-list">
           <li class="p-header__nav-item c-link--animation-ub2"><a href="./about">長野県信用保証協会とは</a></li>
-          <li class="p-header__nav-item c-link--animation-ub2"><a href="">仕事を知る</a></li>
-          <li class="p-header__nav-item c-link--animation-ub2"><a href="">人を知る</a></li>
-          <li class="p-header__nav-item c-link--animation-ub2"><a href="">支援事例</a></li>
-          <li class="p-header__nav-item c-link--animation-ub2"><a href="">働く環境</a></li>
-          <li class="p-header__nav-item c-link--animation-ub2"><a href="">募集要項</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="./works/">仕事を知る</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="./people/">人を知る</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="./supportCase/">支援事例</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="./workingEnvironment/">働く環境</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="./guideline/">募集要項</a></li>
         </ul>
         <div class="p-header__nav-entry"><a href=""><span>エントリー</span></a></div>
       </nav>
@@ -84,49 +84,49 @@
         <div class="p-footer__inner-list">
           <dl class="p-footer__list">
             <div class="p-footer__list-item">
-              <dt><a href="">長野県信用保証協会とは</a></dt>
-              <dd><a href="">私たちの役割</a></dd>
-              <dd><a href="">基本理念</a></dd>
-              <dd class="-sp"><a href="">数字で見る長野県信用保証協会</a></dd>
+              <dt><a href="./about/">長野県信用保証協会とは</a></dt>
+              <dd><a href="./about/role/">私たちの役割</a></dd>
+              <dd><a href="./about/principle/">基本理念</a></dd>
+              <dd><a href="./about/detail/">数字で見る長野県信用保証協会</a></dd>
             </div>
             <div class="p-footer__list-item">
-              <dt><a href="">仕事を知る</a></dt>
-              <dd><a href="">営業部</a></dd>
-              <dd><a href="">企業支援部</a></dd>
-              <dd><a href="">業務統括部</a></dd>
-              <dd><a href="">総務部</a></dd>
-              <dd><a href="">コンプライアンス統括部</a></dd>
+              <dt><a href="./works/">仕事を知る</a></dt>
+              <dd><a href="./works/business/">営業部</a></dd>
+              <dd><a href="./works/support/">企業支援部</a></dd>
+              <dd><a href="./works/management/">業務統括部</a></dd>
+              <dd><a href="./works/generalAffairs">総務部</a></dd>
+              <dd><a href="./works/compliance/">コンプライアンス統括部</a></dd>
             </div>
             <div class="p-footer__list-item">
-              <dt><a href="">人を知る</a></dt>
-              <dd><a href="">職員紹介 中島 菜々子</a></dd>
-              <dd><a href="">職員紹介 本田 朋樹</a></dd>
-              <dd><a href="">職員紹介 浦野 章博</a></dd>
-              <dd><a href="">職員紹介 一ノ瀬 美波</a></dd>
-              <dd><a href="">職員紹介 石坂 友弥</a></dd>
-              <dd><a href="">座談会</a></dd>
+              <dt><a href="./people/">人を知る</a></dt>
+              <dd><a href="./people/people01/">職員紹介 中島 菜々子</a></dd>
+              <dd><a href="./people/people02/">職員紹介 本田 朋樹</a></dd>
+              <dd><a href="./people/people03/">職員紹介 浦野 章博</a></dd>
+              <dd><a href="./people/people04/">職員紹介 一ノ瀬 美波</a></dd>
+              <dd><a href="./people/people05/">職員紹介 石坂 友弥</a></dd>
+              <dd><a href="./people/symposium/">座談会</a></dd>
             </div>
           </dl>
           <dl class="p-footer__list">
             <div class="p-footer__list-item">
-              <dt><a href="">支援事例</a></dt>
-              <dd><a href="">創業者支援
-              <dd><a href="">事業承継支援</a></dd>
-              <dd><a href="">経営改善支援</a></dd>
-              <dd><a href="">課題解決支援</a></dd>
-              <dd><a href="">事業再生支援</a></dd>
+              <dt><a href="./supportCase/">支援事例</a></dt>
+              <dd><a href="./supportCase/founder/">創業者支援
+              <dd><a href="./supportCase/businessSuccession/">事業承継支援</a></dd>
+              <dd><a href="./supportCase/managementImprovement/">経営改善支援</a></dd>
+              <dd><a href="./supportCase/problemSolving/">課題解決支援</a></dd>
+              <dd><a href="./supportCase/jigyosaisei/">事業再生支援</a></dd>
             </div>
             <div class="p-footer__list-item">
-              <dt><a href="">働く環境</a></dt>
-              <dd><a href="">福利厚生</a></dd>
-              <dd><a href="">研修制度</a></dd>
-              <dd><a href="">協会の様子</a></dd>
+              <dt><a href="./workingEnvironment/">働く環境</a></dt>
+              <dd><a href="./Welfare/">福利厚生</a></dd>
+              <dd><a href="./training/">研修制度</a></dd>
+              <dd><a href="./state/">協会の様子</a></dd>
             </div>
             <div class="p-footer__list-item">
-              <dt><a href="">募集要項</a></dt>
+              <dt><a href="./guideline/">募集要項</a></dt>
             </div>
             <div class="p-footer__list-item">
-              <dt><a href="">よくあるご質問</a></dt>
+              <dt><a href="./faq/">よくあるご質問</a></dt>
             </div>
           </dl>
         </div>
