--- a/guideline/index.html
+++ b/guideline/index.html
@@ -48,7 +48,7 @@
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../works/">仕事を知る</a></li>
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../people/">人を知る</a></li>
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../case/">支援事例</a></li>
-          <li class="p-header__nav-item c-link--animation-ub2"><a href="../workingEnvironment/">働く環境</a></li>
+          <li class="p-header__nav-item c-link--animation-ub2"><a href="../environment/">働く環境</a></li>
           <li class="p-header__nav-item c-link--animation-ub2"><a href="../guideline/">募集要項</a></li>
         </ul>
         <div class="p-header__nav-entry"><a href=""><span>エントリー</span></a></div>
@@ -256,7 +256,7 @@
               <dd><a href="../case/jigyosaisei/">事業再生支援</a></dd>
             </div>
             <div class="p-footer__list-item">
-              <dt><a href="../workingEnvironment/">働く環境</a></dt>
+              <dt><a href="../environment/">働く環境</a></dt>
               <dd><a href="../Welfare/">福利厚生</a></dd>
               <dd><a href="../training/">研修制度</a></dd>
               <dd><a href="../state/">協会の様子</a></dd>
