--- a/about/index.html
+++ b/about/index.html
@@ -70,15 +70,15 @@
         <h1 class="c-text--h1"><span>ABOUT US</span>長野県信用保証協会とは</h1>
         <nav class="l-nav">
           <ul>
-            <li><a href="#">私たちの役割</a></li>
-            <li><a href="#">基本理念</a></li>
-            <li><a href="#">数字で見る長野信用保証協会</a></li>
+            <li><a href="#anchor--01">私たちの役割</a></li>
+            <li><a href="#anchor--02">基本理念</a></li>
+            <li><a href="#anchor--03">数字で見る長野信用保証協会</a></li>
           </ul>
         </nav>
       </div>
     </section>
     <section class="l-wrapper__container l-wrapper--right p-about">
-      <div class="p-text-box">
+      <div class="p-text-box" id="anchor--01">
         <h2 class="c-text--h2">私たちの役割</h2>
         <p>信用保証協会は、信用保証協会法に基づいて設立された公的機関です。<br>
           中小企業・小規模事業者のお客様が金融機関から事業資金を借入する際に「公的な保証人」となり、資金調達をサポートしています。万が一返済できなかった場合には、金融機関に立替払い（代位弁済）することを約束します。中小企業の事業資金について「公的保証人」となれるのは、信用保証協会だけ。協会は全国に51（47都道府県＋横浜市、川崎市、岐阜市、名古屋市）あり、長野県信用保証協会はそのひとつです。</p>
@@ -99,12 +99,12 @@
         </div>
       </div>
 
-      <div class="p-text-box">
+      <div class="p-text-box" id="anchor--02">
         <h2 class="c-text--h2">基本理念</h2>
         <p class="p-about--philosophy">私たち長野県信用保証協会は信用保証により<br>明日を拓く中小企業を力強くサポートし<br>長野県の洋々たる発展の一翼を担う</p>
       </div>
 
-      <div class="p-text-box">
+      <div class="p-text-box" id="anchor--03">
         <h2 class="c-text--h2">数字で見る長野県信用保証協会</h2>
         <section>
           <div>
