--- a/case/index.html
+++ b/case/index.html
@@ -23,7 +23,7 @@
 <link rel="icon" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/favicon.png" type="image/png"/>
 </head>
 
-<body class="l-body" id="about">
+<body class="l-body" id="case">
 
 <div class="p-header__sp">
   <button class="p-header__menu-button"></button>
@@ -70,68 +70,70 @@
         <h1 class="c-text--h1"><span>CASE</span>支援事例</h1>
         <nav class="l-nav">
           <ul>
-            <li><a href="#">創業者支援</a></li>
-            <li><a href="#">事業継承支援</a></li>
-            <li><a href="#">経営改善支援</a></li>
-            <li><a href="#">課題解決支援</a></li>
-            <li><a href="#">事業再生支援</a></li>
+            <li><a href="#anchor--01">創業者支援</a></li>
+            <li><a href="#anchor--02">事業継承支援</a></li>
+            <li><a href="#anchor--03">経営改善支援</a></li>
+            <li><a href="#anchor--04">課題解決支援</a></li>
+            <li><a href="#anchor--05">事業再生支援</a></li>
           </ul>
         </nav>
       </div>
     </section>
     <section class="l-wrapper__container l-wrapper--right p-case">
 
-      <div class="p-text-box">
+      <div class="p-text-box" id="anchor--01">
         <h2 class="c-text--h2">創業者支援</h2>
         <div class="p-text-box--bluBox">
-          <h2><span>CASE 01</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <h2 class="p-text-box--bluBox--h2"><span>CASE 01</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
           <div class="p-text-box--bluBox--inner">
-            <div>
-              <dl>
+            <div class="p-text-box--bluBox--fig">
+              <figure><img src="../assets/img/case/dummy.png" alt=""></figure>
+              <dl class="p-text-box--bluBox--dl">
                 <div>
-                  <dt>事業者</dt>
-                  <dd>個人経営のケーキ屋さん</dd>
+                  <dt class="p-text-box--bluBox--dt"><span>事業者</span></dt>
+                  <dd class="p-text-box--bluBox--dd">個人経営のケーキ屋さん</dd>
                 </div>
                 <div>
-                  <dt>課題</dt>
-                  <dd>優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                  <dt class="p-text-box--bluBox--dt"><span>課題</span></dt>
+                  <dd class="p-text-box--bluBox--dd">優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
                 </div>
               </dl>
             </div>
-            <div class="flow">
-              <div>
-                <h2>支援内容</h2>
+            <div>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">支援内容</h2>
                 <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
               </div>
-              <div>
-                <h2>結果</h2>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">結果</h2>
                 <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
               </div>
             </div>
           </div>
         </div>
         <div class="p-text-box--bluBox">
-          <h2><span>CASE 02</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <h2 class="p-text-box--bluBox--h2"><span>CASE 02</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
           <div class="p-text-box--bluBox--inner">
-            <div>
-              <dl>
+            <div class="p-text-box--bluBox--fig">
+              <figure><img src="../assets/img/case/dummy.png" alt=""></figure>
+              <dl class="p-text-box--bluBox--dl">
                 <div>
-                  <dt>事業者</dt>
-                  <dd>個人経営のケーキ屋さん</dd>
+                  <dt class="p-text-box--bluBox--dt"><span>事業者</span></dt>
+                  <dd class="p-text-box--bluBox--dd">個人経営のケーキ屋さん</dd>
                 </div>
                 <div>
-                  <dt>課題</dt>
-                  <dd>優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                  <dt class="p-text-box--bluBox--dt"><span>課題</span></dt>
+                  <dd class="p-text-box--bluBox--dd">優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
                 </div>
               </dl>
             </div>
-            <div class="flow">
-              <div>
-                <h2>支援内容</h2>
+            <div>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">支援内容</h2>
                 <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
               </div>
-              <div>
-                <h2>結果</h2>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">結果</h2>
                 <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
               </div>
             </div>
@@ -139,30 +141,127 @@
         </div>
       </div>
 
-      <div class="p-text-box">
-        <h2 class="c-text--h2">創業者支援</h2>
+      <div class="p-text-box" id="anchor--02">
+        <h2 class="c-text--h2">事業継承支援</h2>
         <div class="p-text-box--bluBox">
-          <h2><span>CASE 08</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <h2 class="p-text-box--bluBox--h2"><span>CASE 08</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
           <div class="p-text-box--bluBox--inner">
-            <div>
-              <dl>
+            <div class="p-text-box--bluBox--fig">
+              <figure><img src="../assets/img/case/dummy.png" alt=""></figure>
+              <dl class="p-text-box--bluBox--dl">
                 <div>
-                  <dt>事業者</dt>
-                  <dd>個人経営のケーキ屋さん</dd>
+                  <dt class="p-text-box--bluBox--dt"><span>事業者</span></dt>
+                  <dd class="p-text-box--bluBox--dd">個人経営のケーキ屋さん</dd>
                 </div>
                 <div>
-                  <dt>課題</dt>
-                  <dd>優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                  <dt class="p-text-box--bluBox--dt"><span>課題</span></dt>
+                  <dd class="p-text-box--bluBox--dd">優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
                 </div>
               </dl>
             </div>
-            <div class="flow">
-              <div>
-                <h2>支援内容</h2>
+            <div>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">支援内容</h2>
                 <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
               </div>
-              <div>
-                <h2>結果</h2>
+              <div class="p-text-box--bluBox--flow">
+                <h2  class="c-text--h4">結果</h2>
+                <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-text-box" id="anchor--03">
+        <h2 class="c-text--h2">経営改善支援</h2>
+        <div class="p-text-box--bluBox">
+          <h2 class="p-text-box--bluBox--h2"><span>CASE 08</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <div class="p-text-box--bluBox--inner">
+            <div class="p-text-box--bluBox--fig">
+              <figure><img src="../assets/img/case/dummy.png" alt=""></figure>
+              <dl class="p-text-box--bluBox--dl">
+                <div>
+                  <dt class="p-text-box--bluBox--dt"><span>事業者</span></dt>
+                  <dd class="p-text-box--bluBox--dd">個人経営のケーキ屋さん</dd>
+                </div>
+                <div>
+                  <dt class="p-text-box--bluBox--dt"><span>課題</span></dt>
+                  <dd class="p-text-box--bluBox--dd">優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                </div>
+              </dl>
+            </div>
+            <div>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">支援内容</h2>
+                <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
+              </div>
+              <div class="p-text-box--bluBox--flow">
+                <h2  class="c-text--h4">結果</h2>
+                <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-text-box" id="anchor--04">
+        <h2 class="c-text--h2">課題解決支援</h2>
+        <div class="p-text-box--bluBox">
+          <h2 class="p-text-box--bluBox--h2"><span>CASE 08</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <div class="p-text-box--bluBox--inner">
+            <div class="p-text-box--bluBox--fig">
+              <figure><img src="../assets/img/case/dummy.png" alt=""></figure>
+              <dl class="p-text-box--bluBox--dl">
+                <div>
+                  <dt class="p-text-box--bluBox--dt"><span>事業者</span></dt>
+                  <dd class="p-text-box--bluBox--dd">個人経営のケーキ屋さん</dd>
+                </div>
+                <div>
+                  <dt class="p-text-box--bluBox--dt"><span>課題</span></dt>
+                  <dd class="p-text-box--bluBox--dd">優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                </div>
+              </dl>
+            </div>
+            <div>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">支援内容</h2>
+                <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
+              </div>
+              <div class="p-text-box--bluBox--flow">
+                <h2  class="c-text--h4">結果</h2>
+                <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="p-text-box" id="anchor--05">
+        <h2 class="c-text--h2">事業再生支援</h2>
+        <div class="p-text-box--bluBox">
+          <h2 class="p-text-box--bluBox--h2"><span>CASE 08</span>コロナ渦で苦しむケーキ屋さんの販路開拓を支援</h2>
+          <div class="p-text-box--bluBox--inner">
+            <div class="p-text-box--bluBox--fig">
+              <figure><img src="../assets/img/case/dummy.png" alt=""></figure>
+              <dl class="p-text-box--bluBox--dl">
+                <div>
+                  <dt class="p-text-box--bluBox--dt"><span>事業者</span></dt>
+                  <dd class="p-text-box--bluBox--dd">個人経営のケーキ屋さん</dd>
+                </div>
+                <div>
+                  <dt class="p-text-box--bluBox--dt"><span>課題</span></dt>
+                  <dd class="p-text-box--bluBox--dd">優れた腕前を持っていましたが、コロナ渦で集客がうまくいかなくなり、広告宣伝方法に悩んでいました。</dd>
+                </div>
+              </dl>
+            </div>
+            <div>
+              <div class="p-text-box--bluBox--flow">
+                <h2 class="c-text--h4">支援内容</h2>
+                <p>新たな宣伝手法・販売経路をつくるために全面支援。首都圏のサテライトショップへの出店指導や、それに向けた商品開発、専門家によるSNS活用指導などを実施しました。さらに、非対面販売に取り組むため「自動販売機」を導入。そのための資金について保証支援を行いました。</p>
+              </div>
+              <div class="p-text-box--bluBox--flow">
+                <h2  class="c-text--h4">結果</h2>
                 <p>サテライトショップへの出店許可を無事取得。SNSの投稿見直しによって、問い合わせも増加しました。新たな販売経路として導入した自動販売機は、当時コロナ渦で外出が制限されていた医療従事者の間で評判に。売上が安定するようになりました。</p>
               </div>
             </div>
