--- a/environment/index.html
+++ b/environment/index.html
@@ -70,15 +70,15 @@
         <h1 class="c-text--h1"><span>ENVIRONMENT</span>働く環境</h1>
         <nav class="l-nav">
           <ul>
-            <li><a href="#">福利厚生</a></li>
-            <li><a href="#">研修制度</a></li>
-            <li><a href="#">協会の様子</a></li>
+            <li><a href="#anchor--01">福利厚生</a></li>
+            <li><a href="#anchor--01">研修制度</a></li>
+            <li><a href="#anchor--01">協会の様子</a></li>
           </ul>
         </nav>
       </div>
     </section>
     <section class="l-wrapper__container l-wrapper--right p-environment">
-      <div class="p-text-box">
+      <div class="p-text-box" id="anchor--01">
         <h2 class="c-text--h2">福利厚生</h2>
         <p>職員のワークライフバランスを実現するため、さまざまな制度を用意しています。</p>
         <h3 class="c-text--h3">休日・休暇</h3>
@@ -88,7 +88,7 @@
         <h3 class="c-text--h3">福利厚生・社内制度</h3>
         <p>各種社会保険（厚生年金、厚生年金基金、組合健康保険、雇用保険、労災保険）<br>住宅資金・厚生資金貸付制度、医療費補助、各種サークル活動 等<br>職員宿舎（家賃補助）</p>
       </div>
-      <div class="p-text-box">
+      <div class="p-text-box" id="anchor--02">
         <h2 class="c-text--h2">研修制度</h2>
         <p>さまざまな研修制度により、一人ひとりのスキルアップをサポートします。</p>
         <table class="p-table">
@@ -127,7 +127,7 @@
           </tbody>
         </table>
       </div>
-      <div class="p-text-box">
+      <div class="p-text-box" id="anchor--03">
         <h2 class="c-text--h2">協会の様子</h2>
         <p>職員にアンケートを実施。実際の雰囲気・仕事のやりがい・働く人の印象について、現場の声をまとめました。</p>
         <div class="p-environment--state p-environment--stateA">
