--- a/people/people01.html
+++ b/people/people01.html
@@ -3,18 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width">
-<title>仕事を知る | 採用サイト | 長野県信用保証協会</title>
+<title>中島 菜々子 | 人を知る | 採用サイト | 長野県信用保証協会</title>
 
 <meta name="robots" content="max-image-preview:large" />
 <link rel="canonical" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit" />
 <meta property="og:locale" content="ja_JP" />
-<meta property="og:site_name" content="仕事を知る | 採用サイト | 長野県信用保証協会" />
+<meta property="og:site_name" content="中島 菜々子 | 人を知る | 採用サイト | 長野県信用保証協会" />
 <meta property="og:type" content="company" />
-<meta property="og:title" content="仕事を知る | 採用サイト | 長野県信用保証協会" />
+<meta property="og:title" content="中島 菜々子 | 人を知る | 採用サイト | 長野県信用保証協会" />
 <meta property="og:url" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/guideline" />
 <meta property="og:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="仕事を知る | 採用サイト | 長野県信用保証協会" />
+<meta name="twitter:title" content="中島 菜々子 | 人を知る | 採用サイト | 長野県信用保証協会" />
 <meta name="twitter:image" content="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/ogp.png" />
 
 <link rel='stylesheet' href='../assets/css/reset.css?ver=6.1.1' type='text/css' media='all' />
@@ -23,7 +23,7 @@
 <link rel="icon" href="http://nagano-cgc-orjp.check-xbiz.jp/cms/recruit/favicon.png" type="image/png"/>
 </head>
 
-<body class="l-body" id="works">
+<body class="l-body people01" id="people">
 
 <div class="p-header__sp">
   <button class="p-header__menu-button"></button>
@@ -60,67 +60,128 @@
 <main class="l-main">
 
   <div class="l-hero">
-    <h1 class="c-text--h1"><span>WORKS</span>仕事を知る</h1>
-    <img src="../assets/img/works/main.png" alt="">
+    <h1 class="c-text--h1"><span>職員紹介</span>先輩の背中を追いかけて、<br>自分のなりたい姿を目指す</h1>
+    <h2>中島 菜々子<span> （1年目 松本営業部業務第1課）</span></h2>
+    <img src="../assets/img/people/main.png" alt="">
+    明朗快活で
+場を明るくする
+期待の新人職員
   </div>
 
   <section class="l-wrapper__outer2 l-wrapper">
     <section class="l-wrapper--left">
       <div class="l-wrapper--left--fixed">
-        <h1 class="c-text--h1"><span>WORKS</span>仕事を知る</h1>
-        <nav class="l-nav">
-          <ul>
-            <li><a href="#anchor--01">営業部</a></li>
-            <li><a href="#anchor--02">企業支援部</a></li>
-            <li><a href="#anchor--03">業務統括部</a></li>
-            <li><a href="#anchor--04">総務部</a></li>
-            <li><a href="#anchor--05">コンプライアンス統括部</a></li>
-          </ul>
-        </nav>
+        <h1 class="c-text--h1"><span>職員紹介</span>先輩の背中を追いかけて、<br>自分のなりたい姿を目指す</h1>
+        <h2>中島 菜々子<span> （1年目 松本営業部業務第1課）</span></h2>
       </div>
     </section>
     <section class="l-wrapper__container l-wrapper--right p-works">
-      <div class="p-text-box">
-        <p>協会には5つの部署があり、それぞれが連携し合ってお客様を支えています。
-          各部署がどんな仕事をしているのかを、詳しくご紹介します。</p>
+
+      <div class="p-text-box" id="anchor--01">
+        <h2 class="c-text--h2">現在の仕事</h2>
+        中小企業を、後方から支える
+        <p>現在は、保証稟議書の作成などを行う保証業務や、郵便物開封、公用車管理といった庶務を中心に行っています。先輩方と一緒に、お客様の経営支援に赴くこともあります。一年目なので、業務の基礎的なことを教わっている最中です。<br>
+          協会の仕事は、中小企業のお客様を後方から支えることだと思っています。「公的な保証人」という、金融機関とは別の立場から企業支援ができることに、魅力を感じています。</p>
+          <img src="../assets/img/people/people01/pic_01.png" alt="">
       </div>
 
       <div class="p-text-box" id="anchor--01">
-        <h2 class="c-text--h2">営業部</h2>
-        <p>実際にお客様と対話し、課題の解決策を一緒に考える機会が多い部署です。保証相談を受け、現状分析やヒアリングから審査を行う「保証審査業務」、保証をご利用いただいている中小企業の経営・再生支援、創業者のフォローアップを行う「経営支援」、代位弁済（※）後の債務に係る管理や回収といった、お客様の債務解決に関わる「管理回収業務」等を行います。<br>
-          ※信用保証協会が中小企業に代わって金融機関へ借入金を返済すること</p>
+        <h2 class="c-text--h2">協会の魅力</h2>
+        お客様にとってのメリットを、一番に考えて仕事ができる
+        <p>協会の魅力は、お客様にとってのメリットを一番に考えられることです。経営支援などで関わった企業が実際に活躍されているのを見ると、やりがいを感じます。経営支援に赴くことは、今の楽しみのひとつです。<br>
+          でも、自分がお客様を支えているというよりは、お客様に支えられていると感じることが多いですね。お話するなかで、自分が勉強させていただくこともたくさんあります。「一方的に支えている」というより、「支え合っている」という感覚に近いです。</p>
+          <img src="../assets/img/people/people01/pic_02.png" alt="">
       </div>
 
-      <div class="p-text-box" id="anchor--02">
-        <h2 class="c-text--h2">企業支援部</h2>
-        <h3 class="c-text--h3">企業支援課</h3>
-        <p>信用保証制度の改正・周知や各支援事業の統括といった、業務全般に関わる企画、調整及び推進を行います。さらに、地域全体の経営改善や再生スキルの向上を目的とした「信州中小企業ネットワーク会議」の事務局運営も担っています。お客様の意見を聞き、制度創設等業務に反映させる部署です。</p>
-        <h3 class="c-text--h3">審査課</h3>
-        <p>営業店で行う「保証審査業務」と「管理回収業務」を統括する部署です。保証審査に関する相談業務、求償権（※）の管理・回収の統括や指導を行っています。実際に業務を行う営業店に正確な情報を共有することが重要な部署です。<br>
-          ※他人のための弁済をした者が、他人に対してその返還または弁済を求めること</p>
+      <div class="p-text-box" id="anchor--01">
+        <h2 class="c-text--h2">今後の目標</h2>
+        尊敬する先輩のように、誰からも信頼される人になる
+        <p>金融機関の方にも中小企業の方にも信頼される、知識と人柄を身につけることです。目標としている先輩のようになれるよう、日々勉強中です。<br>
+          先輩は、業務のなかでわからないことがあったり、失敗したりしてしまったときも、丁寧にフォローしてくれます。業務以外の相談にのっていただくこともあり、普段からよく様子を見て、気にかけてくれているのを感じます。一人ひとりがしっかりと責任を持ち、お互いに助け合う、先輩方の姿をとても尊敬しています。自分もそんな人になりたいです。</p>
       </div>
 
-      <div class="p-text-box" id="anchor--03">
-        <h2 class="c-text--h2">業務統括部</h2>
-        <h3 class="c-text--h3">信用保険課</h3>
-        <p>代位弁済の手続きを統括する部署です。また、中小企業者からの弁済金の回収金処理等も行っています。制度の根幹を支える部署であり、協会が在る意義を実感しやすい部署です。</p>
-        <h3 class="c-text--h3">業務課</h3>
-        <p>財務データの入力、保証稟議書の管理、全国信用保証協会連合会等への定期報告といった「保証事務」と、法的措置、債権管理等に関わる「管理事務」を行います。営業店の職員を事務的な側面から支えることで、業務を円滑化する役割を担っています。</p>
+
+      ある1日のスケジュール
+      <div>
+        <dl>
+          <div>
+            <dt>8:30</dt>
+            <dd>出勤</dd>
+          </div>
+          <div>
+            <dt>8:45</dt>
+            <dd>メールの確認等業務準備<br>郵便開封、仕分け</dd>
+          </div>
+          <div>
+            <dt>9:15</dt>
+            <dd>保証審査補助、庶務</dd>
+          </div>
+          <div>
+            <dt>12:00</dt>
+            <dd>昼食</dd>
+          </div>
+          <div>
+            <dt>13:00</dt>
+            <dd>保証稟議書の作成</dd>
+          </div>
+          <div>
+            <dt>16:30</dt>
+            <dd>資料片付け</dd>
+          </div>
+          <div>
+            <dt>16:50</dt>
+            <dd>一日の振り返り</dd>
+          </div>
+          <div>
+            <dt>17:20</dt>
+            <dd>退勤</dd>
+          </div>
+        </dl>
+
       </div>
 
-      <div class="p-text-box" id="anchor--04">
-        <h2 class="c-text--h2">総務部</h2>
-        <h3 class="c-text--h3">総務課</h3>
-        <p>協会の「人」と「お金」を適切に管理することで、協会を裏から支える部署です。<br>
-          人事や給与等、働く職員に関する業務を担う「総務」と、予算や保証料など、金銭面の管理を担う「経理」の仕事があります。</p>
-        <h3 class="c-text--h3">企画情報課</h3>
-        <p>経営企画に関する業務全般を行います。具体的な業務には、経営計画の策定、Webサイト管理等のシステム運用、お客様に協会の存在を知ってもらうための広報活動などがあります。</p>
-      </div>
 
-      <div class="p-text-box" id="anchor--05">
-        <h2 class="c-text--h2">コンプライアンス統括部</h2>
-        <p>内部監査やコンプライアンス管理、個人情報保護など、コンプライアンスに関わる業務を統括します。</p>
-      </div>
+      <figure>
+        <img src="" alt="">
+        <figcaption>明朗快活で場を明るくする期待の新人職員</figcaption>
+      </figure>
+      中島 菜々子
+      1年目 松本営業部業務第1課
+
+      <figure>
+        <img src="" alt="">
+        <figcaption>課題を本質から解決する気鋭の若手職員</figcaption>
+      </figure>
+      本田 朋樹
+      2年目 松本営業部業務第2課
+
+      <figure>
+        <img src="" alt="">
+        <figcaption>相手の話にしっかり寄り添う気さくな広報担当職員</figcaption>
+      </figure>
+      浦野 章博
+      8年目 総務部企画情報課
+
+      <figure>
+        <img src="" alt="">
+        <figcaption>誠実にお客様と向き合う優しいワーキングママ</figcaption>
+      </figure>
+      一ノ瀬 美波
+      14年目 本店営業部業務第2課
+
+      <figure>
+        <img src="" alt="">
+        <figcaption>さりげない気配りで誰からも頼られるベテラン社員</figcaption>
+      </figure>
+      石坂 友弥
+      16年目 業務統括部業務課
+
+
+
+      それぞれの色を持った職員が、年齢、性別、キャリアの垣根を超えて、<br>
+      協会で働く日々について語り合いました！
+
+      <a href=""><span>もっと見る</span></a>
 
     </section>
   </section>
